// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands constraints test (empty project / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_dependency (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_dependency (extraneous)) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_dependency (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on no-deps (via 2.0.0), but doesn't (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_dependency (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_field (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_field (extraneous)) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_field (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (empty project / gen_enforced_field (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_dependency (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0053: workspace-a must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0053: workspace-b must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_dependency (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0025: workspace-a has an extraneous dependency on no-deps (in dependencies)
➤ YN0025: workspace-a has an extraneous dependency on no-deps (in devDependencies)
➤ YN0025: workspace-b has an extraneous dependency on no-deps (in dependencies)
➤ YN0025: workspace-b has an extraneous dependency on no-deps (in devDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_dependency (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on no-deps (via 2.0.0), but doesn't (in dependencies)
➤ YN0024: workspace-a must depend on no-deps via 2.0.0, but uses 1.0.0 instead (in dependencies)
➤ YN0024: workspace-b must depend on no-deps via 2.0.0, but uses 1.0.0 instead (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_dependency (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0023: workspace-a must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0023: workspace-b must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_field (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0053: workspace-a must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0053: workspace-b must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_field (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0039: workspace-a has an extraneous field dependencies set to null
➤ YN0039: workspace-b has an extraneous field dependencies set to null
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_field (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but doesn't
➤ YN0038: workspace-a must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but is set to \\"1.0.0\\" instead
➤ YN0038: workspace-b must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but is set to \\"1.0.0\\" instead
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (multiple workspaces / gen_enforced_field (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0037: workspace-a must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0037: workspace-b must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_dependency (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_dependency (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0025: root-workspace-0b6124 has an extraneous dependency on no-deps (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_dependency (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0024: root-workspace-0b6124 must depend on no-deps via 2.0.0, but uses 1.0.0 instead (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_dependency (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_field (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_field (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0039: root-workspace-0b6124 has an extraneous field dependencies set to null
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_field (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0038: root-workspace-0b6124 must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but is set to \\"1.0.0\\" instead
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (one regular dependency / gen_enforced_field (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_dependency (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_dependency (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0025: root-workspace-0b6124 has an extraneous dependency on no-deps (in devDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_dependency (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on no-deps (via 2.0.0), but doesn't (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_dependency (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_field (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_field (extraneous)) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_field (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two development dependencies / gen_enforced_field (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_dependency (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_dependency (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0025: root-workspace-0b6124 has an extraneous dependency on no-deps (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_dependency (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0024: root-workspace-0b6124 must depend on no-deps via 2.0.0, but uses 1.0.0 instead (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_dependency (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_field (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_field (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0039: root-workspace-0b6124 has an extraneous field dependencies set to null
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_field (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0038: root-workspace-0b6124 must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but is set to \\"1.0.0\\" instead
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies / gen_enforced_field (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / empty constraints) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_dependency (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must depend on no-deps via conflicting ranges 1.0.0 and 2.0.0 (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_dependency (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0025: root-workspace-0b6124 has an extraneous dependency on no-deps (in dependencies)
➤ YN0025: root-workspace-0b6124 has an extraneous dependency on no-deps (in devDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_dependency (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0024: root-workspace-0b6124 must depend on no-deps via 2.0.0, but uses 1.0.0 instead (in dependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_dependency (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0023: root-workspace-0b6124 must depend on one-fixed-dep (via 1.0.0), but doesn't (in peerDependencies)
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_field (ambiguous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0053: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to conflicting values \\"1.0.0\\" or \\"2.0.0\\"
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_field (extraneous)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0039: root-workspace-0b6124 has an extraneous field dependencies set to null
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_field (incompatible)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0038: root-workspace-0b6124 must have a field dependencies[\\"no-deps\\"] set to \\"2.0.0\\", but is set to \\"1.0.0\\" instead
➤ YN0000: Failed with errors
",
}
`;

exports[`Commands constraints test (two regular dependencies, two development dependencies / gen_enforced_field (missing)) 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "➤ YN0037: root-workspace-0b6124 must have a field dependencies[\\"a-new-dep\\"] set to \\"1.0.0\\", but doesn't
➤ YN0000: Failed with errors
",
}
`;
